--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+name: Cap'n Proto for Rust
+description: updates on capnproto-rust
 markdown: rdiscount
 pygments: true
 baseurl: /capnproto-rust
+url: http://dwrensha.github.io/capnproto-rust
